[package]
name = "membank"
version = "0.5.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = ["Daniel Murrow <dsmurrow@gmail.com>"]
repository = "https://github.com/dsmurrow/membank"

description = "A pool of reusable memory to prevent unnecessary deallocations"
keywords = ["no_std", "data", "memory"]
categories = ["memory-management", "no-std"]

[features]
std = ["crossbeam-channel/std"]
default = ["std"]

[dependencies.crossbeam-channel]
version = "0.5.8"
default-features = false
features = ["std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
